[package]
name = "tico"
version = "2.0.0"
authors = ["Ricardo Mendes <rokusu@gmail.com>"]
description = "Tico provides a path shortener for use with command prompts."
documentation = "http://portocodes.github.io/tico/tico/index.html"
homepage = "https://github.com/portocodes/tico"
repository = "https://github.com/portocodes/tico"
readme = "README.md"
license = "MIT"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[[bin]]
name = "tico"
doc = false

[dependencies]
dirs = "5"
